--- a/Caddyfile
+++ b/Caddyfile
@@ -9,7 +9,7 @@
 
 :80 {
 	# Handle /yourapp paths - proxy to generated app on port 3000
-	handle /yourapp/* {
+	handle_path /yourapp/* {
 		reverse_proxy localhost:3000
 	}
 
