Implement recommended Caddy configuration - use {} and simple routing

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,44 +1,11 @@
-{
-	admin off
-	auto_https off
-	log {
-		output file /var/log/caddy.log
-		format console
-	}
+:{$PORT}
+
+# Route generated app
+handle_path /yourapp/* {
+    reverse_proxy 127.0.0.1:3000
 }
 
-:8000 {
-	# Handle /yourapp paths - proxy to generated app on port 3000
-	handle_path /yourapp/* {
-		reverse_proxy localhost:3000
-	}
-
-	# Handle root /yourapp redirect
-	redir /yourapp /yourapp/ 307
-
-	# Static files for main application
-	handle /static/* {
-		root * /app/development/src
-		file_server
-	}
-
-	# API endpoints for main application
-	handle /api/* {
-		reverse_proxy localhost:8001
-	}
-
-	# Health endpoint
-	handle /health {
-		reverse_proxy localhost:8001
-	}
-
-	# Main application routes
-	handle /* {
-		reverse_proxy localhost:8001 {
-			# Health check for FastAPI app
-			health_uri /health
-			health_interval 30s
-			health_timeout 5s
-		}
-	}
+# Route AI-DIY (everything else)
+handle {
+    reverse_proxy 127.0.0.1:8000
 }
