Final Caddyfile fix - remove braces and correct port to 8000

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,12 +1,9 @@
-:{$PORT} {
+:{$PORT}
 
-	# Route generated app
-	handle_path /yourapp/* {
-		reverse_proxy 127.0.0.1:3000
-	}
+handle_path /yourapp/* {
+	reverse_proxy 127.0.0.1:3000
+}
 
-	# Route AI-DIY (everything else)
-	handle {
-		reverse_proxy 127.0.0.1:8001
-	}
+handle {
+	reverse_proxy 127.0.0.1:8000
 }
