--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@
 	handle_path /yourapp/* {
 		reverse_proxy 127.0.0.1:3000 {
 			header_up X-Forwarded-Prefix /yourapp
-			header_down Location "^/(.*)" "/yourapp/$1"
+			header_down Location "^/yourapp/(.*)" "/yourapp/$1"
 		}
 	}
 
