Fix redirect issue: Smart Caddy config for generated app vs AI-DIY platform
PROBLEM:
- Generated app redirects like res.redirect('/dashboard') were going to /dashboard (FastAPI 404)
- Caddy only rewrote Location headers starting with /yourapp/, but server sends /dashboard
- Users got 'Not Found' when already logged in visiting /yourapp/login

SOLUTION:
- Generated app (port 3000): Rewrite ALL Location headers to add /yourapp prefix
- AI-DIY platform (port 8001): Leave Location headers unchanged
- Clean separation between two applications

TECHNICAL CHANGE:
- Changed Caddy pattern from '^/yourapp/(.*)' to '^/(.*)' for generated app
- Added explicit reverse_proxy block for AI-DIY with no header rewriting
- Now res.redirect('/dashboard') from generated app becomes Location: /yourapp/dashboard

RESULT:
- /yourapp/login (already logged in) → redirects to /yourapp/dashboard ✅
- AI-DIY platform redirects work normally ✅
- Generated app stays simple (no environment detection needed) ✅

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,11 +2,14 @@
 	handle_path /yourapp/* {
 		reverse_proxy 127.0.0.1:3000 {
 			header_up X-Forwarded-Prefix /yourapp
-			header_down Location "^/yourapp/(.*)" "/yourapp/$1"
+			# Rewrite ALL Location headers from generated app to include /yourapp prefix
+			header_down Location "^/(.*)" "/yourapp/$1"
 		}
 	}
 
 	handle {
-		reverse_proxy 127.0.0.1:8001
+		reverse_proxy 127.0.0.1:8001 {
+			# Don't rewrite Location headers from AI-DIY platform
+		}
 	}
 }
