Add sprint_log context to Sprint Execution PM and update prompt
- Added sprint_log to inject_context for SPRINT_EXECUTION_PM in personas_config.json
- Updated SPRINT_EXECUTION_PM_system_prompt.txt to use Sprint Log for status queries
- Sarah can now answer 'how is the team doing?' with real execution data
- Prevents 405 errors from incorrect API calls for status checks

--- a/system_prompts/personas_config.json
+++ b/system_prompts/personas_config.json
@@ -277,7 +277,6 @@
       ],
       "meeting_triggers": [],
       "solo_mode": false,
-      "inject_context": [],
       "system_prompt_file": "system_prompts/SPRINT_RETROSPECTIVE_PM_system_prompt.txt"
     },
     "SPRINT_EXECUTION_PM": {
@@ -299,7 +298,8 @@
       "inject_context": [
         "vision",
         "backlog",
-        "sprint_plan"
+        "sprint_plan",
+        "sprint_log"
       ],
       "meeting_announcement": {
         "start": "\ud83c\udfaf Starting Sprint Execution Meeting: {project_name}",
